# poppy-raspi-thymio

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Detector Log.desktop  README.md  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties  tox.ini  ucia-detector.conf
detector/: detector.py
docs/: authors.md  conf.py  index.rst  installation.rst  readme.md  requirements.txt  usage.rst  walkthrough.ipynb
docs/reference/: index.rst  poppy_raspi_thymio.rst
features/: README.md  detectable-list.feature  detector.feature  frame.feature  lane.feature  thing.feature  thymio.feature
src/poppy/raspi_thymio/: __init__.py  __main__.py  colors.py  control.py  detectable.py  detector.py  frame.py  lane.py  remote.py  self_type.py  stop.py  thing.py  thymio.py
src/poppy/raspi_thymio/aesl/: 00-intelligence_humaine.json  10-coureuse_prudente.aesl  10-coureuse_prudente.json  12-balayeuse_vigilante.aesl  12-balayeuse_vigilante.json  20-chasseuse_de_tresor.aesl  20-chasseuse_de_tresor.json  20-chasseuse_de_trésor.aesl  20-chasseuse_de_trésor.json  _default.aesl  _poweroff.aesl  humaine.aesl  poppy-raspi-thymio.aesl  ucia-balayeur.aesl  ucia-balayeuse.aesl  ucia-chasseuse.aesl  ucia-coureuse.aesl  ucia-default.aesl
src/poppy/raspi_thymio/webui/: __init__.py  aesl.py
src/poppy/raspi_thymio/webui/static/: doButton.js  style.css
src/poppy/raspi_thymio/webui/templates/: index.html
src/poppy_raspi_thymio/: __main__.py
systemd/: thymio-device-manager.service  ucia-detector.service  ucia-webui.service
tests/: conftest.py  test_detectable_list.py  test_frame.py  test_lane.py  test_poppy_raspi_thymio.py  test_thing.py  test_thymio.py
tools/poppy_raspi_thymio/: poppy_raspi_thymio.cwl  poppy_raspi_thymio_tests.yaml
webui/: webui.py
