[metadata]
description_file = README.md
version = attr: poppy_raspi_thymio.__version__
[flake8]
max-line-length = 96
exclude = */migrations/*[tool:pytest]
bdd_features_base_dir = features/
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

